{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 619,
  "lineage": "628889c6-3631-0abd-5ce3-d0747882db18",
  "resources": [
    {
      "module": "module.fithealth2_ec2_bastion_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fithealth2instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:302343444946:instance/i-0a0cc4f0c6d72cb32",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0cc4f0c6d72cb32",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fithealth2kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08807ee48a2cd5d36",
            "private_dns": "ip-172-0-6-242.ap-south-1.compute.internal",
            "private_ip": "172.0.6.242",
            "public_ip": "3.7.252.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cbd335ec1de0e71d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036b4275c7c193b67",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f71562d56101d0a9"
            ]
          },
          "dependencies": [
            "module.fithealth2_ec2_bastion_instance.aws_security_group.fithealthec2sshgroup",
            "module.fithealth2_key_pair.aws_key_pair.fithealth2kp",
            "module.fithealth2_ng_module.aws_eip.fithealth2_ip",
            "module.fithealth2_ng_module.aws_nat_gateway.fithealth2ng",
            "module.fithealth2_ng_module.aws_route_table.fithealth2ngroutetable",
            "module.fithealth2_ng_module.aws_route_table_association.fithealth2ngassosication",
            "module.fithealth2_rds.aws_db_instance.fithealth2db",
            "module.fithealth2_rds.aws_db_subnet_group.fithealth2dbsubnetgroup",
            "module.fithealth2_rds.aws_security_group.fithealth2_db_sg",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_ec2_bastion_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fithealthec2sshgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:security-group/sg-0f71562d56101d0a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f71562d56101d0a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20220315040553857800000006",
            "name_prefix": "terraform-",
            "owner_id": "302343444946",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fithealth2_ng_module.aws_eip.fithealth2_ip",
            "module.fithealth2_ng_module.aws_nat_gateway.fithealth2ng",
            "module.fithealth2_ng_module.aws_route_table.fithealth2ngroutetable",
            "module.fithealth2_ng_module.aws_route_table_association.fithealth2ngassosication",
            "module.fithealth2_rds.aws_db_instance.fithealth2db",
            "module.fithealth2_rds.aws_db_subnet_group.fithealth2dbsubnetgroup",
            "module.fithealth2_rds.aws_security_group.fithealth2_db_sg",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_ec2_instance[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fithealth2instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:302343444946:instance/i-0186dff70b213a55c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0186dff70b213a55c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fithealth2kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0da4a18778ee307dd",
            "private_dns": "ip-172-0-1-17.ap-south-1.compute.internal",
            "private_ip": "172.0.1.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e648835a8f9fadc9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa14c481567ebefc",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bad2dab0292f6553"
            ]
          },
          "dependencies": [
            "module.fithealth2_ec2_instance.aws_security_group.fithealthec2sshgroup",
            "module.fithealth2_key_pair.aws_key_pair.fithealth2kp",
            "module.fithealth2_ng_module.aws_eip.fithealth2_ip",
            "module.fithealth2_ng_module.aws_nat_gateway.fithealth2ng",
            "module.fithealth2_ng_module.aws_route_table.fithealth2ngroutetable",
            "module.fithealth2_ng_module.aws_route_table_association.fithealth2ngassosication",
            "module.fithealth2_rds.aws_db_instance.fithealth2db",
            "module.fithealth2_rds.aws_db_subnet_group.fithealth2dbsubnetgroup",
            "module.fithealth2_rds.aws_security_group.fithealth2_db_sg",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_ec2_instance[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fithealthec2sshgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:security-group/sg-0bad2dab0292f6553",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bad2dab0292f6553",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20220315040553858300000007",
            "name_prefix": "terraform-",
            "owner_id": "302343444946",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fithealth2_ng_module.aws_eip.fithealth2_ip",
            "module.fithealth2_ng_module.aws_nat_gateway.fithealth2ng",
            "module.fithealth2_ng_module.aws_route_table.fithealth2ngroutetable",
            "module.fithealth2_ng_module.aws_route_table_association.fithealth2ngassosication",
            "module.fithealth2_rds.aws_db_instance.fithealth2db",
            "module.fithealth2_rds.aws_db_subnet_group.fithealth2dbsubnetgroup",
            "module.fithealth2_rds.aws_security_group.fithealth2_db_sg",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_ec2_instance[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "fithealth2instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0851b76e8b1bce90b",
            "arn": "arn:aws:ec2:ap-south-1:302343444946:instance/i-0b4b21186b9751fee",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4b21186b9751fee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "fithealth2kp",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02048d49df8fd4258",
            "private_dns": "ip-172-0-2-160.ap-south-1.compute.internal",
            "private_ip": "172.0.2.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07de833e0f41573a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1a6fbf072912e3c",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a5a150c584a35f2d"
            ]
          },
          "dependencies": [
            "module.fithealth2_ec2_instance.aws_security_group.fithealthec2sshgroup",
            "module.fithealth2_key_pair.aws_key_pair.fithealth2kp",
            "module.fithealth2_ng_module.aws_eip.fithealth2_ip",
            "module.fithealth2_ng_module.aws_nat_gateway.fithealth2ng",
            "module.fithealth2_ng_module.aws_route_table.fithealth2ngroutetable",
            "module.fithealth2_ng_module.aws_route_table_association.fithealth2ngassosication",
            "module.fithealth2_rds.aws_db_instance.fithealth2db",
            "module.fithealth2_rds.aws_db_subnet_group.fithealth2dbsubnetgroup",
            "module.fithealth2_rds.aws_security_group.fithealth2_db_sg",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_ec2_instance[1]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fithealthec2sshgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:security-group/sg-0a5a150c584a35f2d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5a150c584a35f2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "172.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20220315040553857800000005",
            "name_prefix": "terraform-",
            "owner_id": "302343444946",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fithealth2_ng_module.aws_eip.fithealth2_ip",
            "module.fithealth2_ng_module.aws_nat_gateway.fithealth2ng",
            "module.fithealth2_ng_module.aws_route_table.fithealth2ngroutetable",
            "module.fithealth2_ng_module.aws_route_table_association.fithealth2ngassosication",
            "module.fithealth2_rds.aws_db_instance.fithealth2db",
            "module.fithealth2_rds.aws_db_subnet_group.fithealth2dbsubnetgroup",
            "module.fithealth2_rds.aws_security_group.fithealth2_db_sg",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "fithealth2_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:302343444946:loadbalancer/fithealth2-elb",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "fithealth2-elb-1832892200.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:8080/healthcheck",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "fithealth2-elb",
            "idle_timeout": 400,
            "instances": [
              "i-0186dff70b213a55c",
              "i-0b4b21186b9751fee"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 8080,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "fithealth2-elb",
            "security_groups": [
              "sg-08a75f3b06f722d25"
            ],
            "source_security_group": "302343444946/terraform-20220315040231108200000002",
            "source_security_group_id": "sg-08a75f3b06f722d25",
            "subnets": [
              "subnet-036b4275c7c193b67",
              "subnet-0b276b6b59e9042ef"
            ],
            "tags": {
              "Name": "fithealth2-elb"
            },
            "tags_all": {
              "Name": "fithealth2-elb"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.fithealth2_ec2_instance.aws_instance.fithealth2instance",
            "module.fithealth2_ec2_instance.aws_security_group.fithealthec2sshgroup",
            "module.fithealth2_elb.aws_security_group.fithealthelbhttpsggroup",
            "module.fithealth2_key_pair.aws_key_pair.fithealth2kp",
            "module.fithealth2_ng_module.aws_eip.fithealth2_ip",
            "module.fithealth2_ng_module.aws_nat_gateway.fithealth2ng",
            "module.fithealth2_ng_module.aws_route_table.fithealth2ngroutetable",
            "module.fithealth2_ng_module.aws_route_table_association.fithealth2ngassosication",
            "module.fithealth2_rds.aws_db_instance.fithealth2db",
            "module.fithealth2_rds.aws_db_subnet_group.fithealth2dbsubnetgroup",
            "module.fithealth2_rds.aws_security_group.fithealth2_db_sg",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_elb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fithealthelbhttpsggroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:security-group/sg-08a75f3b06f722d25",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a75f3b06f722d25",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220315040231108200000002",
            "name_prefix": "terraform-",
            "owner_id": "302343444946",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_ig_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fithealth2ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:internet-gateway/igw-03b66958c53fd27dc",
            "id": "igw-03b66958c53fd27dc",
            "owner_id": "302343444946",
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_ig_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fithealth2routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:route-table/rtb-03e7d76f135e47ec9",
            "id": "rtb-03e7d76f135e47ec9",
            "owner_id": "302343444946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b66958c53fd27dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fithealth2_ig_module.aws_internet_gateway.fithealth2ig",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_ig_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fithealth2assosication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0233552b2f78d8630",
            "route_table_id": "rtb-03e7d76f135e47ec9",
            "subnet_id": "subnet-0b276b6b59e9042ef"
          },
          "dependencies": [
            "module.fithealth2_ig_module.aws_internet_gateway.fithealth2ig",
            "module.fithealth2_ig_module.aws_route_table.fithealth2routetable",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091ddf3fb2f7dd4a3",
            "route_table_id": "rtb-03e7d76f135e47ec9",
            "subnet_id": "subnet-036b4275c7c193b67"
          },
          "dependencies": [
            "module.fithealth2_ig_module.aws_internet_gateway.fithealth2ig",
            "module.fithealth2_ig_module.aws_route_table.fithealth2routetable",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_ng_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "fithealth2_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c721b097ec5c34c5",
            "association_id": "eipassoc-06dea8b842a51dd23",
            "domain": "vpc",
            "id": "eipalloc-0c721b097ec5c34c5",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a771d7e5f784ce7f",
            "private_dns": "ip-172-0-5-233.ap-south-1.compute.internal",
            "private_ip": "172.0.5.233",
            "public_dns": "ec2-3-111-211-225.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.211.225",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.fithealth2_ng_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "fithealth2ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c721b097ec5c34c5",
            "connectivity_type": "public",
            "id": "nat-0826a25f055027586",
            "network_interface_id": "eni-0a771d7e5f784ce7f",
            "private_ip": "172.0.5.233",
            "public_ip": "3.111.211.225",
            "subnet_id": "subnet-0b276b6b59e9042ef"
          },
          "dependencies": [
            "module.fithealth2_ng_module.aws_eip.fithealth2_ip",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_ng_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fithealth2ngroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:route-table/rtb-0af2fe648ab288c8d",
            "id": "rtb-0af2fe648ab288c8d",
            "owner_id": "302343444946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0826a25f055027586",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.fithealth2_ng_module.aws_nat_gateway.fithealth2ng",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_ng_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fithealth2ngassosication",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091174027de4e8eda",
            "route_table_id": "rtb-0af2fe648ab288c8d",
            "subnet_id": "subnet-0fa14c481567ebefc"
          },
          "dependencies": [
            "module.fithealth2_ng_module.aws_eip.fithealth2_ip",
            "module.fithealth2_ng_module.aws_nat_gateway.fithealth2ng",
            "module.fithealth2_ng_module.aws_route_table.fithealth2ngroutetable",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0767a937b2ed8558e",
            "route_table_id": "rtb-0af2fe648ab288c8d",
            "subnet_id": "subnet-0c1a6fbf072912e3c"
          },
          "dependencies": [
            "module.fithealth2_ng_module.aws_eip.fithealth2_ip",
            "module.fithealth2_ng_module.aws_nat_gateway.fithealth2ng",
            "module.fithealth2_ng_module.aws_route_table.fithealth2ngroutetable",
            "module.subnets_module.aws_subnet.fithealthsubnet",
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.fithealth2_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fithealth2_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:security-group/sg-0b010dd780d087b7f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b010dd780d087b7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20220315040231107600000001",
            "name_prefix": "terraform-",
            "owner_id": "302343444946",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_module[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fithealthsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:subnet/subnet-0fa14c481567ebefc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa14c481567ebefc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302343444946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fithealth2_0"
            },
            "tags_all": {
              "Name": "fithealth2_0"
            },
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_module[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fithealthsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:subnet/subnet-0c1a6fbf072912e3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1a6fbf072912e3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302343444946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fithealth2_1"
            },
            "tags_all": {
              "Name": "fithealth2_1"
            },
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_module[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fithealthsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:subnet/subnet-0883ae39013d43fad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0883ae39013d43fad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302343444946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fithealth2_2"
            },
            "tags_all": {
              "Name": "fithealth2_2"
            },
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_module[3]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fithealthsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:subnet/subnet-09a771d5aeb0fe373",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a771d5aeb0fe373",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302343444946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fithealth2_3"
            },
            "tags_all": {
              "Name": "fithealth2_3"
            },
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_module[4]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fithealthsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:subnet/subnet-0b276b6b59e9042ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b276b6b59e9042ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302343444946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fithealth2_4"
            },
            "tags_all": {
              "Name": "fithealth2_4"
            },
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets_module[5]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fithealthsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:subnet/subnet-036b4275c7c193b67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036b4275c7c193b67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302343444946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fithealth2_5"
            },
            "tags_all": {
              "Name": "fithealth2_5"
            },
            "vpc_id": "vpc-0ebf17789b0492fd0"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.fithealth2vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fithealth2vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:302343444946:vpc/vpc-0ebf17789b0492fd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-055ae90692e832655",
            "default_route_table_id": "rtb-0730b1fab8536ca20",
            "default_security_group_id": "sg-087118c069bc99cdd",
            "dhcp_options_id": "dopt-c3cb3ba8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ebf17789b0492fd0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0730b1fab8536ca20",
            "owner_id": "302343444946",
            "tags": {
              "Name": "fithealth2vpc"
            },
            "tags_all": {
              "Name": "fithealth2vpc"
            }
          }
        }
      ]
    }
  ]
}